[gd_scene load_steps=20 format=3 uid="uid://b1m5v4cswjhtt"]

[ext_resource type="Script" uid="uid://b4tufrh4wmxw5" path="res://Menus/MainTitle/main_title.gd" id="1_8028k"]
[ext_resource type="Texture2D" uid="uid://djrvp7ir5hym7" path="res://Assets/BrianSprites/Screens/title_screen.png" id="2_a43gl"]
[ext_resource type="FontFile" uid="uid://bftmjwmvbmgcm" path="res://Assets/Fonts/Magedov_Military.ttf" id="2_swqwr"]
[ext_resource type="Texture2D" uid="uid://b2kelxd6toktp" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_arrows_vertical.png" id="3_8uocf"]
[ext_resource type="Texture2D" uid="uid://cwt48ujqk6udm" path="res://Assets/BrianSprites/UI/fondoboton.png" id="3_hcsev"]
[ext_resource type="Texture2D" uid="uid://ca8f02maausa" path="res://Assets/input-prompts/Keyboard & Mouse/Default/keyboard_return.png" id="4_mygqm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hcsev"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a43gl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uecoh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jya30"]

[sub_resource type="Animation" id="Animation_4jbvb"]
resource_name = "RESET_BLACK"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r3pq3"]
resource_name = "RESET_2"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mjedt"]
resource_name = "fade_in2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_avxlh"]
resource_name = "fade_out2"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ktsje"]
resource_name = "fade_out_all"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_uecoh"]
resource_name = "game_ready"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.7, 2),
"transitions": PackedFloat32Array(1, 1, 2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.7, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bpddo"]
resource_name = "start_game"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_qr2ui"]
resource_name = "walk_forward"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GridContainer/Menu:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MarginContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("MarginContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("GridContainer/GameTitle:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e6okx"]
_data = {
&"RESET_BLACK": SubResource("Animation_4jbvb"),
&"RESET_WHITE": SubResource("Animation_r3pq3"),
&"fade_in": SubResource("Animation_mjedt"),
&"fade_out": SubResource("Animation_avxlh"),
&"fade_out_all": SubResource("Animation_ktsje"),
&"game_ready": SubResource("Animation_uecoh"),
&"hide_menu": SubResource("Animation_bpddo"),
&"walk_forward": SubResource("Animation_qr2ui")
}

[node name="MainTitle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8028k")

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
position = Vector2(960, 540)
texture = ExtResource("2_a43gl")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -133.5
offset_right = 87.0
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 50

[node name="GameTitle" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 80
text = "MOLE COMMAND"

[node name="Menu" type="GridContainer" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/v_separation = 15

[node name="StartGameButton" type="Button" parent="GridContainer/Menu"]
layout_mode = 2
focus_neighbor_top = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("3_hcsev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_hcsev")
text = "START_GAME"
flat = true
icon_alignment = 1

[node name="OptionsButton" type="Button" parent="GridContainer/Menu"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("3_hcsev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a43gl")
text = "OPTIONS"
flat = true
icon_alignment = 1

[node name="ControlsButton" type="Button" parent="GridContainer/Menu"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("3_hcsev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uecoh")
text = "CONTROLS"
flat = true
icon_alignment = 1

[node name="QuitButton" type="Button" parent="GridContainer/Menu"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../StartGameButton")
mouse_default_cursor_shape = 2
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
theme_override_icons/icon = ExtResource("3_hcsev")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jya30")
text = "QUIT"
flat = true
icon_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -325.0
offset_top = -125.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(280, 80)
layout_mode = 2
color = Color(0.172549, 0.141176, 0.0784314, 1)

[node name="GridContainer2" type="GridContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer2/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("3_8uocf")
expand_mode = 1

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GridContainer2/HBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
text = "SELECT_OPTION"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/CenterContainer/GridContainer2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/CenterContainer/GridContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("4_mygqm")
expand_mode = 1

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/GridContainer2/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 20
text = "CONFIRM_OPTION"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 100

[node name="MadeBy" type="Label" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_swqwr")
theme_override_font_sizes/font_size = 35
text = "MADE_BY"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_e6okx")
}

[connection signal="focus_entered" from="GridContainer/Menu/StartGameButton" to="." method="_on_start_game_button_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Menu/StartGameButton" to="." method="_on_start_game_button_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/Menu/StartGameButton" to="." method="_on_start_game_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/Menu/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="focus_entered" from="GridContainer/Menu/OptionsButton" to="." method="_on_options_button_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Menu/OptionsButton" to="." method="_on_options_button_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/Menu/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/Menu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="focus_entered" from="GridContainer/Menu/ControlsButton" to="." method="_on_controls_button_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Menu/ControlsButton" to="." method="_on_controls_button_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/Menu/ControlsButton" to="." method="_on_controls_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/Menu/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="focus_entered" from="GridContainer/Menu/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="focus_exited" from="GridContainer/Menu/QuitButton" to="." method="_on_quit_button_focus_exited"]
[connection signal="mouse_entered" from="GridContainer/Menu/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="GridContainer/Menu/QuitButton" to="." method="_on_quit_button_pressed"]
